# bitcoin-whitepaper

./: Cargo.toml  README.md
src/: blockchain.rs  crypto.rs  lib.rs  main.rs
src/blockchain/: block.rs  testaaa.rs  tx.rs  utxo.rs
src/crypto/: hash.rs  signature.rs
