[package]
name = "bitcoin-whitepaper"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.37.2"
sha2 = "0.10.9"
secp256k1 = {version = "0.31.1", features = ["rand", "recovery", "global-context"]}
rand_core = "0.9.3"
#rand = "0.8.5"
derivative = "2.2.0"
itertools = "0.9.0"
min-heap = "1.0.0"